# semantic-release-test

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  main.py  pyproject.toml
